--- a/agent/pom.xml
+++ b/agent/pom.xml
@@ -80,7 +80,7 @@
 	</dependencies>
 
 	<build>
-	<!--
+	<pluginManagement>
 		<plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -101,7 +101,7 @@
                 </executions>
                 <configuration>
                     <schemaLanguage>WSDL</schemaLanguage>
-                    <generatePackage>com.booking.agent.bookingagent.model</generatePackage>
+                    <generatePackage>com.booking.agent.bookingagent.pera</generatePackage>
                     <schemas>
                         <schema>
                             <url>http://localhost:8080/ws/lodgings.wsdl</url>
@@ -111,7 +111,7 @@
             </plugin>
            
         </plugins>
-		-->
+		</pluginManagement>
 	</build>
 
 
